normal card create

--- a/stylecard.html
+++ b/stylecard.html
@@ -8,8 +8,63 @@
     <title>style card</title>
 </head>
 <body>
-    <div>
-        
-    </div>
+   <div class="photo-album">
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+       <div class="photo-frame">
+           <div class="photo"><img src="https://cdn.pixabay.com/photo/2014/04/14/20/11/pink-324175_960_720.jpg" alt=""></div>
+           <div class="details">
+               <h2 class="color">The beauty of Nature</h2>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos magnam optio consectetur exercitationem quae quia, dolor ut accusantium hic quaerat provident voluptatum laudantium inventore aperiam nemo perferendis. Optio, iure.</p>
+           </div>
+       </div>
+   </div>
 </body>
 </html>
